<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_fundo"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1.0">

        <include
            android:id="@+id/app_toolbar_programacao"
            layout="@layout/activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="15.0dip"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                app:srcCompat="@drawable/bar_logo_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100.0dip"
            android:layout_marginStart="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginEnd="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/imgBtn_dia1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/screen_border"
                android:onClick="onClick"
                android:paddingTop="20.0dip"
                android:paddingBottom="20.0dip"
                android:text="@string/text_btn_day1"
                android:textAllCaps="false"
                android:textColor="@color/textIcons"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100.0dip"
            android:layout_marginStart="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginEnd="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/imgBtn_dia2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/screen_border"
                android:onClick="onClick"
                android:paddingTop="20.0dip"
                android:paddingBottom="20.0dip"
                android:text="@string/text_btn_day2"
                android:textAllCaps="false"
                android:textColor="@color/textIcons"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100.0dip"
            android:layout_marginStart="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginEnd="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip"
            android:orientation="horizontal">

            <Button
                android:id="@+id/imgBtn_dia3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/screen_border"
                android:onClick="onClick"
                android:paddingTop="20.0dip"
                android:paddingBottom="20.0dip"
                android:text="@string/text_btn_day3"
                android:textAllCaps="false"
                android:textColor="@color/textIcons"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>